--- a/app/src/main/res/layout/activity_delivery_detail.xml
+++ b/app/src/main/res/layout/activity_delivery_detail.xml
@@ -1,9 +1,142 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".view.DeliveryDetailActivity">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:padding="20dp"
+   >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:orientation="vertical"
+        android:padding="10dp">
+
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:elevation="10dp"
+            android:gravity="center"
+            android:padding="10dp"
+
+            android:text=" Delivery Details "
+            android:textColor="@color/forefround"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/fullName"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@android:color/white"
+            android:drawablePadding="8dp"
+            android:gravity="center_vertical"
+            android:hint="FullName"
+            android:elevation="8dp"
+            android:inputType="textCapWords"
+            android:padding="10dp"
+            android:singleLine="true"
+
+            android:textSize="16sp" />
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1px"
+            />
+
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1px"
+           />
+
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1px"
+           />
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1px"
+            />
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1px"
+             />
+
+
+
+        <EditText
+            android:id="@+id/address"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@android:color/white"
+            android:drawablePadding="8dp"
+            android:gravity="center_vertical"
+            android:hint="Address"
+            android:inputType="textPostalAddress"
+            android:elevation="8dp"
+            android:padding="10dp"
+            android:singleLine="true"
+
+            android:textSize="16sp" />
+
+
+        <EditText
+            android:id="@+id/landmark"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@android:color/white"
+            android:drawablePadding="8dp"
+            android:gravity="center_vertical"
+            android:hint="Landmark"
+            android:inputType="textPostalAddress"
+            android:elevation="8dp"
+            android:padding="10dp"
+            android:singleLine="true"
+
+            android:textSize="16sp" />
+
+
+        <EditText
+            android:id="@+id/zip"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@android:color/white"
+            android:drawablePadding="8dp"
+            android:gravity="center_vertical"
+            android:hint="Zip code"
+            android:inputType="textPostalAddress"
+            android:elevation="8dp"
+            android:padding="10dp"
+            android:singleLine="true"
+
+            android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/btnOrder"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:text="Place Order\n(Cash On Delivery)"
+            android:elevation="10dp"
+            android:background="#E62C6B"
+
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:layout_marginTop="40dp">
+
+        </Button>
+
+
+
+
+    </LinearLayout>
+</RelativeLayout>
