--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="background">#E91E63</color>
+    <color name="forefround">#34D5C1</color>
+    <color name="textonActionBar">#BBDCD8</color>
 </resources>
