--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -8,7 +8,7 @@
     tools:context=".view.CartActivity">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/toolbar_container"
+
         style="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -22,6 +22,7 @@
             app:layout_scrollFlags="scroll|enterAlways|snap">
 
             <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/main_activity_toolbar_layout_height"
                 android:background="@color/background"
