--- a/app/src/main/res/layout/item_detail.xml
+++ b/app/src/main/res/layout/item_detail.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/item_detail_height"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="@dimen/cardRadius"
     android:elevation="@dimen/margin"
@@ -13,6 +13,7 @@
         android:orientation="vertical">
         <ImageView
             android:cropToPadding="true"
+            android:layout_marginTop="5dp"
             android:id="@+id/imageMain"
             android:layout_width="match_parent"
             android:layout_height="@dimen/item_height"/>
@@ -20,7 +21,13 @@
             android:id="@+id/item_detail_title"
             android:layout_width="wrap_content"
             android:textSize="20sp"
+            android:textStyle="bold"
             android:layout_weight="2"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/description"
+            android:textSize="18sp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <LinearLayout
             android:layout_width="match_parent"
