--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,7 +27,11 @@
     <dimen name="textSizeTotal">30sp</dimen>
     <dimen name="textSizeCartDetailMax">20sp</dimen>
     <dimen name="textSizeMinCartDetail">15sp</dimen>
-
+    <dimen name="textSmall">30sp</dimen>
+    <dimen name="elevationCard">12dp</dimen>
+    <dimen name="marginLeftcardView">15dp</dimen>
+    <dimen name="marginRightcardView">15dp</dimen>
+    <dimen name="text20">20sp</dimen>
     <!--
 Refer to App Widget Documentation for margin information
 http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
