--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,168 +1,169 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_height="match_parent"
-    android:layout_width="match_parent"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/toolbar_container"
+        style="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:elevation="@dimen/elevation_appbar_layout">
+
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:overScrollMode="always"
             app:layout_scrollFlags="scroll|enterAlways|snap">
+
             <androidx.appcompat.widget.Toolbar
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/main_activity_toolbar_layout_height"
-                android:elevation="@dimen/elevation_appbar_layout"
-                android:background="@color/background">
+                android:background="@color/background"
+                android:elevation="@dimen/elevation_appbar_layout">
+
                 <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="cursive"
+                    android:gravity="center"
                     android:text="@string/signup"
                     android:textColor="@color/textonActionBar"
-                    android:fontFamily="cursive"
-                    android:textSize="@dimen/textsizeappbarlayout"
-                    android:layout_width="match_parent"
-                    android:gravity="center"
-                    android:layout_height="wrap_content"/>
+                    android:textSize="@dimen/textsizeappbarlayout" />
             </androidx.appcompat.widget.Toolbar>
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
+
     <LinearLayout
-   android:layout_marginTop="52dp"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:background="@color/background"
-
-    android:padding="20dp">
-
-
-    <EditText
-        android:id="@+id/fullName"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_height="fill_parent"
+        android:layout_marginTop="52dp"
+        android:background="@color/textonActionBar"
+        android:elevation="@dimen/elevationCard"
+        android:orientation="vertical"
 
-        android:drawablePadding="8dp"
-        android:gravity="center_vertical"
-        android:hint="@string/name"
-        android:inputType="textCapWords"
-        android:padding="10dp"
-        android:singleLine="true"
-        android:background="@color/forefround"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="16sp" />
+        android:padding="20dp">
 
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="1px"
-         />
 
-    <EditText
-        android:id="@+id/userEmailId"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        <EditText
+            android:id="@+id/fullName"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
 
-        android:drawablePadding="8dp"
-        android:gravity="center_vertical"
-        android:hint="@string/email"
-        android:inputType="textEmailAddress"
-        android:padding="10dp"
-        android:background="@color/forefround"
-        android:singleLine="true"
+            android:background="@color/forefround"
+            android:drawablePadding="8dp"
+            android:gravity="center_vertical"
+            android:hint="@string/name"
+            android:inputType="textCapWords"
+            android:padding="10dp"
+            android:singleLine="true"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="16sp" />
 
-        android:textColorHint="@color/colorPrimaryDark"
-        android:textSize="16sp" />
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1px" />
 
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="1px"
-        android:background="@color/forefround"
-        />
+        <EditText
+            android:id="@+id/userEmailId"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
 
-    <EditText
-        android:id="@+id/mobileNumber"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+            android:background="@color/forefround"
+            android:drawablePadding="8dp"
+            android:gravity="center_vertical"
+            android:hint="@string/email"
+            android:inputType="textEmailAddress"
+            android:padding="10dp"
+            android:singleLine="true"
 
-        android:drawablePadding="8dp"
-        android:gravity="center_vertical"
-        android:hint="@string/phone"
-        android:inputType="phone"
-        android:background="@color/forefround"
-        android:padding="10dp"
-        android:singleLine="true"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="16sp" />
+            android:textColorHint="@color/colorPrimaryDark"
+            android:textSize="16sp" />
 
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="1px"
-        android:background="@color/forefround"
-         />
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1px"
+            android:background="@color/forefround" />
 
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="1px"
-        android:background="@color/forefround"
-         />
+        <EditText
+            android:id="@+id/mobileNumber"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
 
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:background="@color/forefround"
-        android:drawablePadding="8dp"
-        android:gravity="center_vertical"
-        android:hint="@string/pass"
-        android:inputType="textPassword"
-        android:padding="10dp"
-        android:singleLine="true"
-        android:textColor="@color/colorPrimaryDark"
+            android:background="@color/forefround"
+            android:drawablePadding="8dp"
+            android:gravity="center_vertical"
+            android:hint="@string/phone"
+            android:inputType="phone"
+            android:padding="10dp"
+            android:singleLine="true"
+            android:textColor="#030009"
+            android:textSize="16sp" />
 
-        android:textSize="16sp" />
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1px"
+            android:background="#000000" />
 
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="1px"
-        android:background="@color/forefround"
-        />
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1px"
+            android:background="@color/forefround" />
 
-    <EditText
-        android:id="@+id/confirmPassword"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:background="@color/forefround"
-        android:drawablePadding="8dp"
-        android:gravity="center_vertical"
-        android:hint="@string/cpass"
-        android:inputType="textPassword"
-        android:padding="10dp"
-        android:singleLine="true"
-        android:textColor="@color/colorPrimaryDark"
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:background="@color/forefround"
+            android:drawablePadding="8dp"
+            android:gravity="center_vertical"
+            android:hint="@string/pass"
+            android:inputType="textPassword"
+            android:padding="10dp"
+            android:singleLine="true"
+            android:textColor="@color/colorPrimaryDark"
 
-        android:textSize="16sp" />
+            android:textSize="16sp" />
 
-    <Button
-        android:id="@+id/signUpBtn"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:padding="3dp"
-        android:background="@color/forefround"
-        android:text="@string/signup"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="17sp"
-        android:textStyle="bold" />
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1px"
+            android:background="@color/forefround" />
 
-</LinearLayout>
+        <EditText
+            android:id="@+id/confirmPassword"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:background="@color/forefround"
+            android:drawablePadding="8dp"
+            android:gravity="center_vertical"
+            android:hint="@string/cpass"
+            android:inputType="textPassword"
+            android:padding="10dp"
+            android:singleLine="true"
+            android:textColor="@color/colorPrimaryDark"
+
+            android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/signUpBtn"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:background="@color/forefround"
+            android:padding="3dp"
+            android:text="@string/signup"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="17sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
