--- a/app/src/main/res/layout/cartdetailitem.xml
+++ b/app/src/main/res/layout/cartdetailitem.xml
@@ -5,7 +5,10 @@
     android:layout_width="match_parent"
     app:cardBackgroundColor="@color/forefround"
     app:cardElevation="@dimen/cardview_default_elevation"
-    android:layout_margin="10dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginLeft="@dimen/layoutmarginLeft"
+    android:layout_marginRight="@dimen/layoutmarginright"
+    android:layout_marginBottom="10dp"
 
     app:cardCornerRadius="25dp"
     android:layout_height="wrap_content">
