--- a/app/src/main/res/layout/item_detail.xml
+++ b/app/src/main/res/layout/item_detail.xml
@@ -21,12 +21,14 @@
             android:id="@+id/item_detail_title"
             android:layout_width="wrap_content"
             android:textSize="20sp"
+            android:textColor="@color/dark"
             android:textStyle="bold"
             android:layout_weight="2"
             android:layout_height="wrap_content"/>
         <TextView
             android:id="@+id/description"
             android:textSize="18sp"
+            android:textColor="@color/dark"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <LinearLayout
@@ -36,6 +38,7 @@
             <TextView
                 android:id="@+id/price"
                 android:textSize="25sp"
+                android:textColor="@color/dark"
                 android:layout_width="0dp"
                 android:layout_weight="2"
                 android:layout_height="wrap_content"/>
@@ -44,6 +47,11 @@
                 android:outlineAmbientShadowColor="@color/background"
                 android:layout_width="0dp"
                 android:layout_height="@dimen/textsizeItemName"
+
+                android:background="@color/common_google_signin_btn_text_dark_pressed"
+                android:popupBackground="@color/textonActionBar"
+                android:keyboardNavigationCluster="true"
+                android:outlineSpotShadowColor="@color/dark"
                 android:layout_weight="0.5"/>
             <Button
                 android:id="@+id/btnitemdetail"
