--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:padding="10dp"
-            android:text="Login In"
+            android:text="@string/login"
             android:textColor="#fff"
             android:textSize="25sp"
             android:textStyle="bold"/>
@@ -35,7 +35,7 @@
             android:background="@android:color/transparent"
             android:drawablePadding="8dp"
             android:gravity="center_vertical"
-            android:hint="Email"
+            android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:padding="10dp"
 
@@ -54,7 +54,7 @@
             android:background="@android:color/transparent"
             android:drawablePadding="8dp"
             android:gravity="center_vertical"
-            android:hint="Password"
+            android:hint="@string/pass"
             android:inputType="textPassword"
             android:padding="10dp"
 
@@ -76,8 +76,8 @@
             android:layout_marginTop="3dp"
             android:background="@color/forefround"
             android:padding="3dp"
-            android:text="LOGIN"
-
+            android:text="@string/login"
+            android:contentDescription="@string/login"
             android:textSize="17sp"
             android:textStyle="bold" />
     </LinearLayout>
@@ -92,7 +92,7 @@
         android:gravity="center"
         android:elevation="@dimen/elevationCard"
         android:padding="5dp"
-        android:text="CREATE ACCOUNT"
+        android:text="@string/createacc"
        android:background="@color/forefround"
         android:textSize="15sp" />
 
