--- a/app/src/main/res/layout/cartdetailitem.xml
+++ b/app/src/main/res/layout/cartdetailitem.xml
@@ -82,6 +82,7 @@
             android:gravity="center"
             android:id="@+id/removeitem"
             android:text="@string/remove"
+            android:contentDescription="@string/remove"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
