--- a/app/src/main/res/layout/item_detail.xml
+++ b/app/src/main/res/layout/item_detail.xml
@@ -15,6 +15,7 @@
             android:cropToPadding="true"
             android:layout_marginTop="5dp"
             android:id="@+id/imageMain"
+            android:contentDescription="@string/item"
             android:layout_width="match_parent"
             android:layout_height="@dimen/item_height"/>
         <TextView
